combined flags, work on 20,22,23

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@ distance_matrix.py
 distance_methods.py
 task_folder/*.*
 flags/*.*
+INSTRUCTIONS/*.*
+output/*.*
  *.docx
+database.py
+access.py
 
 
-group1.py
 
